feat: finish period feat
